5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1771_1183.log
== TEST (2019-05-24 16:17:25) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont <= len(vet)):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:18:02) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont <= len(vet)):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:19:01) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont <= len(vet)):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
	cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:19:20) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont < len(vet)):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
	cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:20:02) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont < len(vet)-1):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
	cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:25:10) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont < n):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:26:58) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

while(cont < len(vet)-1):
	if(vet[cont] >= 0):
		vetM[cont] = vet[cont]
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:30:57) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:33:04) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x > 0):
		n += 1
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x > 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:33:31) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x > 0):
		n += 1
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x > 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:34:04) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 16:35:26) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- EXECUTION TIME:
0.434917
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:41:07) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0
s ="aa"

for x in vet:
	if(x >= 0):
		n += 1
		s = "aa" + s "gg"
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
File "XXXX", line 11
    s = "aa" + s "gg"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:41:18) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0
s ="aa"

for x in vet:
	if(x >= 0):
		n += 1
		s = "aa" + s + "gg"
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:43:26) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0
s = "a"

for x in vet:
	if(x >= 0):
		n += 1
		s = s + str(x)
		
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:46:08) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0
s = "a"

for x in vet:
	if(x >= 0):
		n += 1
		s = s + str(x)
	if(x != vet[-1]):
		s = s + ", "
		
vetS = array(eval("["+s+"]"))
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
print(vetS)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:47:09) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0
s = "a"

for x in vet:
	if(x >= 0):
		n += 1
		s = s + str(x)
	if(x != vet[-1]):
		s = s + ", "
		
s = "[" + s + "]"
vetS = array(eval(s))
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
print(vetS)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:48:01) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0
s = "a"

for x in vet:
	if(x >= 0):
		n += 1
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
print(vetS)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:48:12) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 16:48:28) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))
cont = 0
n = 0

for x in vet:
	if(x >= 0):
		n += 1
vetM = zeros(n, dtype=int)

for x in vet:
	if(x >= 0):
		vetM[cont] = x
		cont += 1
		
print(vetM)
-- EXECUTION TIME:
0.419533
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
